stopping for the day, can now display books and styled the covers

--- a/react-assessment/src/App.css
+++ b/react-assessment/src/App.css
@@ -41,3 +41,8 @@ body {
   width: 70%;
   float: left;
 }
+
+img {
+  height: 60%;
+  width: 45%;
+}
